[package]
name = "artrade-pfp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "artrade_pfp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
#idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "^0.30.0"
anchor-spl = {version = "0.30.0"}
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
mpl-token-metadata = { version="3.0.0" }
#mpl-token-metadata = { version="1.5.0" }
solana-program = "1.15.0"
